<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Finpro</string>
    <string name="app_name_long">Finpro - Final Project Management System</string>
    <string name="app_name_subtitle">Final Project Management System</string>
    <string name="title_judulpa_pengajuan">Pengajuan Mandiri</string>
    <string name="title_bimbingan">Bimbingan</string>
    <string name="title_monev">Monev</string>
    <string name="title_sidang">Sidang</string>
    <string name="title_profil">Profil</string>
    <string name="title_informasi">Informasi</string>
    <string name="title_judulpa">Judul Proyek Akhir</string>
    <string name="title_judulpakategori">Kategori Judul Proyek Akhir</string>
    <string name="title_judulpa_pendek">Judul PA</string>
    <string name="title_judulpa_dosen">Judul Dosen</string>
    <string name="title_judulpa_dosen_tambah">Tambah Judul Proyek Akhir</string>
    <string name="title_judulpa_mahasiswa">Judul Mahasiswa</string>
    <string name="title_mahasiswa">Mahasiswa</string>
    <string name="title_tolak">Tolak</string>
    <string name="title_setuju">Setuju</string>
    <string name="title_pengajuan_judulpa">Pengajuan Judul PA</string>
    <string name="title_proyekakhir">Proyek Akhir</string>
    <string name="title_informasi_detail">Detail Informasi</string>
    <string name="title_informasi_tambah">Tambah Informasi</string>
    <string name="title_bimbingan_detail">Detail Bimbingan</string>
    <string name="title_monev_detail">Detail Monev</string>
    <string name="title_keluar">Keluar</string>
    <string name="title_list_bimbingan">Bimbingan</string>
    <string name="title_list_monev">Monev</string>
    <string name="title_mahasiswa_detail">Detail Mahasiswa</string>
    <string name="title_pemetaan_detail">Detail Pemetaan Monev</string>
    <string name="title_bimbingan_tambah">Bimbingan Mahasiswa</string>
    <string name="title_monev_tambah">Monev Mahasiswa</string>
    <string name="title_pemberitahuan">Pemberitahuan</string>
    <string name="title_informasi_ubah">Ubah Informasi</string>
    <string name="title_judulpa_detail">Detail Judul Proyek Akhir</string>
    <string name="title_bimbingan_ubah">Ubah Bimbingan</string>
    <string name="title_monev_ubah">Ubah Monev</string>
    <string name="title_judulpa_dosen_ubah">Ubah Judul Proyek Akhir Dosen</string>
    <string name="title_profil_ubah">Ubah Profil</string>
    <string name="title_kontak_dosen">Kontak</string>
    <string name="title_dosen_detail">Detail Dosen</string>
    <string name="title_proyekakhir_detail">Detail Proyek Akhir</string>
    <string name="title_tambah_dosen">Tambah Dosen</string>
    <string name="title_tambah_pemetaan">Tambah Pemetaan Monev</string>
    <string name="title_dosen_ubah">Ubah Dosen</string>
    <string name="title_mahasiswa_tambah">Tambah Mahasiswa</string>
    <string name="title_mahasiswa_ubah">Ubah Mahasiswa</string>
    <string name="title_email_dosen">Email</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_dosen">Dosen</string>
    <string name="title_kelompok_mahasiswa_detail">Detail Kelompok</string>
    <string name="title_review_monev">Review Monev</string>
    <string name="title_kategori_monev">Kategori Monev</string>
    <string name="title_kategori_judul_pa">Kategori Judul PA</string>
    <string name="title_pemetaan_monev">Pemetaan Monev</string>
    <string name="title_monev_mahasiswa">Monev Mahasiswa</string>
    <string name="title_sidang_tambah">Tambah Sidang</string>
    <string name="title_masukkan_review_sidang">Masukkan Review Sidang</string>
    <string name="button_click_masuk">Masuk</string>
    <string name="button_click_simpan">Simpan</string>
    <string name="button_click_tambah_judul">Tambah Judul</string>
    <string name="button_click_tambah_mahasiswa">Tambah Mahasiswa</string>
    <string name="button_click_ubah_mahasiswa">Ubah Mahasiswa</string>
    <string name="button_click_tambah_monev">Tambah Monev</string>
    <string name="button_click_tambah_bimbingan">Tambah Bimbingan</string>
    <string name="button_click_tambah_info">Tambah Informasi</string>
    <string name="button_click_ubah_informasi">Ubah Informasi</string>
    <string name="button_click_tambah_dosen">Tambah Dosen</string>
    <string name="button_click_ubah_dosen">Ubah Dosen</string>
    <string name="button_click_tambah_sidang">Tambah Nilai Sidang</string>
    <string name="button_click_ubah_bimbingan">Ubah Bimbingan</string>
    <string name="dummyLong">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam veniam similique voluptates odit, ipsum laborum architecto distinctio harum, provident fugiat praesentium ex quod dolores laudantium aliquid quidem placeat incidunt vitae!</string>
    <string name="dummy">Dummy</string>
    <string name="dummy_mahasiswa_nim">6706160014</string>
    <string name="dummy_mahasiswa_nama">Ikhsan Ramadhan</string>
    <string name="dummy_mahasiswa_kelompok">Seven Primavera</string>
    <string name="dummy_pa_judul">Finpro - Mobile Based Final Project Management System</string>
    <string name="dummy_anggota_kelompok_1">Muh. Faisal Amir</string>
    <string name="dummy_anggota_kelompok_2">M. Ikhsan Ramadhan</string>
    <string name="dummy_anggota_nim_1">6706160014</string>
    <string name="dummy_anggota_nim_2">6706162062</string>
    <string name="dummy_jumlah_bimbingan">6</string>
    <string name="dummy_dosen_reviewer">Indra Azimi, S.T., M.T.</string>
    <string name="dummy_monev_terkahir">3</string>
    <string name="dummy_dosen_pembimbing">Hariandi Maulid, S.T., M.Sc</string>
    <string name="dummy_tanggal">28 Januari 2019</string>
    <string name="dummy_hasil_bimbingan">Revisi Bab 1</string>
    <string name="dummy_nilai_monev">80</string>
    <string name="dummy_no_telp">081357108568</string>
    <string name="dummy_kelas">D3IF 40 02</string>
    <string name="dummy_status_dosen">Pembimbing, Reviewer</string>
    <string name="dummy_kategori">Android</string>
    <string name="dummy_pa_kategori">Android</string>
    <string name="dummy_pa_jumlah_pengajuan">4</string>
    <string name="dummy_status_sidang">Lulus</string>
    <string name="dummy_dosen_kode">HMU</string>
    <string name="dummy_email">ikhsanramadhan28@gmail.com</string>
    <string name="dummy_kehadiran">Hadir</string>
    <string name="dialog_hapus_title">Hapus Data</string>
    <string name="dialog_hapus_text">Anda yakin ingin menghapus ini?</string>
    <string name="dialog_ubah_text">Apakah anda yakin ingin merubah ini?</string>
    <string name="dialog_ubah_title">Ubah Data</string>
    <string name="dialog_tambah">Tambah</string>
    <string name="dialog_pengajuan_judul_title">Ajukan Judul</string>
    <string name="dialog_pengajuan_judul_text">Apakah anda yakin data sudah benar</string>
    <string name="dialog_setuju_text">Apakah anda setuju untuk meng-acc kelompok ini?</string>
    <string name="dialog_setuju_title">Setuju Judul</string>
    <string name="dialog_tolak_title">Tolak Judul</string>
    <string name="dialog_tolak_text">Apakah anda yakin menolak kelompok ini?</string>
    <string name="dialog_keluar_title">Keluar</string>
    <string name="dialog_keluar_text">Anda Yakin Ingin Keluar?</string>
    <string name="iya">Iya</string>
    <string name="tidak">Tidak</string>
    <string name="ubah">Ubah</string>
    <string name="batal">Batal</string>
    <string name="tambah">Tambah</string>
    <string name="menu_informasi">Informasi</string>
    <string name="menu_mahasiswa">Mahasiswa</string>
    <string name="menu_dosen">Dosen</string>
    <string name="menu_proyek_akhir">Proyek Akhir</string>
    <string name="menu_pemetaan_monev">Pemetaan Monev</string>
    <string name="menu_judul_pa">Judul</string>
    <string name="menu_kategori_judul">Kategori Judul</string>
    <string name="menu_arsip_judul">Arsip Judul</string>
    <string name="menu_kategori_monev">Kategori Monev</string>
    <string name="hint_id_pengguna">ID Pengguna</string>
    <string name="hint_kata_sandi">Kata Sandi</string>
    <string name="hint_info_judul">Judul</string>
    <string name="hint_info_isi">Isi</string>
    <string name="hint_judulpa_judul">Judul Proyek Akhir</string>
    <string name="hint_judulpa_kategori">Kategori</string>
    <string name="hint_judulpa_deskripsi">Deskripsi</string>
    <string name="hint_nama_dosen">Masukkan Nama Dosen</string>
    <string name="hint_email_dosen">Masukkan Email</string>
    <string name="hint_kontak_dosen">Masukkan Kontak Dosen</string>
    <string name="hint_judul">Masukkan judul</string>
    <string name="hint_kode_dosen">Masukkan Kode Dosen</string>
    <string name="hint_angkatan_mahasiswa">Masukkan Angkatan Mahasiswa</string>
    <string name="hint_masukkan_nim">Masukkan NIM</string>
    <string name="hint_masukkan_nama">Masukkan Nama</string>
    <string name="hint_masukkan_nama_kelompok">Masukkan Nama Kelompok</string>
    <string name="hint_masukkan_judul_pa">Masukkan Judul PA</string>
    <string name="hint_masukkan_deskripsi_judul_pa">Masukkan Deskripsi Judul PA</string>
    <string name="hint_review_bimbingan">Masukkan Review Bimbingan</string>
    <string name="hint_judul_bimbingan">Masukkan Judul Bimbingan</string>
    <string name="hint_kategori">Masukkan Kategori Proyek Akhir</string>
    <string name="hint_masukkan_kategori_monev">Masukkan Kategori Monev</string>
    <string name="hint_monev_review">Masukkan Review Monev</string>
    <string name="hint_monev_nilai">Masukkan Nilai Monev</string>
    <string name="hint_informasi_isi">Masukkan Informasi</string>
    <string name="hint_nim_mahasiswa">Masukkan NIM Mahasiswa</string>
    <string name="hint_nama_mahasiswa">Masukkan Nama Mahasiswa</string>
    <string name="hint_kontak_mahasiswa">Masukkan Kontak Mahasiswa</string>
    <string name="hint_masukkan_minimal_jumlah_bimbingan">Masukkan Minimal Jumlah BImbingan</string>
    <string name="text_profil_detail_nama">Nama</string>
    <string name="text_profil_detail_nip">NIP</string>
    <string name="text_profil_detail_nim">NIM</string>
    <string name="text_profil_detail_kelas">Kelas</string>
    <string name="text_profil_detail_jurusan">Jurusan</string>
    <string name="text_profil_detail_status">Status</string>
    <string name="text_profil_detail_notelp">No Telp</string>
    <string name="text_profil_detail_kelompok">Kelompok</string>
    <string name="text_bimbingan_home_judul">Bimbingan Kelompok Proyek Akhir</string>
    <string name="text_dosen_pembimbing">Dosen Pembimbing</string>
    <string name="text_jumlah_bimbingan">Jumlah Bimbingan</string>
    <string name="text_nama_kelompok">Nama Kelompok</string>
    <string name="text_judul_proyek_akhir">Judul Proyek Akhir</string>
    <string name="text_deskripsi_judul_pa">Deskripsi Judul Proyek Akhir</string>
    <string name="text_kategori">Kategori Proyek Akhir</string>
    <string name="text_ajukan_judul">Ajukan Judul</string>
    <string name="text_nim_anggota_2">NIM Anggota 2</string>
    <string name="text_nama_anggota_2">Nama Anggota 2</string>
    <string name="text_nim_anggota_1">NIM Anggota 1</string>
    <string name="text_nama_anggota_1">Nama Angota 1</string>
    <string name="text_angkatan">Angkatan</string>
    <string name="text_nilai_monev">Nilai Monev</string>
    <string name="text_nama_mahasiswa">Mahasiswa</string>
    <string name="text_ubah_monev">Ubah Monev</string>
    <string name="text_nim_mahasiswa">Nim Mahasiswa</string>
</resources>