<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_big"
        tools:context=".activities.MahasiswaJudulPaDosenPengajuanActivity">

        <ImageView
            android:layout_width="@dimen/dimen_profil_photo"
            android:layout_height="@dimen/dimen_profil_photo"
            android:src="@drawable/ic_editor_judul_pa"
            android:layout_marginBottom="@dimen/dimen_big_ultra"
            android:layout_gravity="center"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_judul_proyek_akhir"
            android:layout_marginBottom="@dimen/dimen_small"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/act_mhs_pa_pengajuan_textview_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginBottom="@dimen/dimen_big"
            android:text="@string/app_name_long"
            android:textColor="@color/colorTextBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_kategori"
            android:layout_marginBottom="@dimen/dimen_small"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/act_mhs_pa_pengajuan_textview_kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/colorTextBlack"
            android:text="@string/dummy_kategori"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_deskripsi_judul_pa"
            android:layout_marginBottom="@dimen/dimen_small"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/act_mhs_pa_pengajuan_textview_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/dummyLong"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dosen_pembimbing"
            android:layout_marginBottom="@dimen/dimen_small"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/act_mhs_pa_pengajuan_textview_dosen_pembimbing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/dummy_dosen_pembimbing"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nim_anggota_1"
            android:layout_marginBottom="@dimen/dimen_small"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/act_mhs_pa_pengajuan_textview_nim_anggota_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/dummy_anggota_nim_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nama_anggota_1"
            android:layout_marginBottom="@dimen/dimen_small"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/act_mhs_pa_pengajuan_textview_nama_anggota_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/dummy_anggota_kelompok_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nim_anggota_2"
            android:layout_marginBottom="@dimen/dimen_small"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_mhs_pa_pengajuan_editview_nim_anggota_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium"
            android:inputType="number"
            android:layout_marginStart="-4dp"
            android:layout_marginEnd="-4dp"
            android:imeOptions="actionSearch"
            android:hint="@string/hint_masukkan_nim"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nama_anggota_2"
            android:layout_marginBottom="@dimen/dimen_small"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/act_mhs_pa_pengajuan_editview_nama_anggota_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/hint_masukkan_nim"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nama_kelompok"
            android:layout_marginBottom="@dimen/dimen_small"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_mhs_pa_pengajuan_editview_nama_kelompok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_big"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/text_size_medium"
            android:inputType="text"
            android:layout_marginStart="-4dp"
            android:layout_marginEnd="-4dp"
            android:hint="@string/hint_masukkan_nama_kelompok"/>

        <Button
            android:id="@+id/act_mhs_pa_pengajuan_button_simpan"
            android:text="@string/text_ajukan_judul"
            style="@style/button_all_primary"/>

    </LinearLayout>
</ScrollView>