<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_big_16dp">

        <ImageView
            android:src="@drawable/ic_editor_info"
            style="@style/image_all_editor_view"/>

        <TextView
            android:text="@string/title_review_monev"
            style="@style/textview_title_all_editor_view"/>

        <EditText
            android:id="@+id/act_dsn_edittext_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/hint_monev_review"/>

        <TextView
            android:text="@string/text_nilai_monev"
            style="@style/textview_title_all_editor_view"/>

        <EditText
            android:id="@+id/act_dsn_edittext_nilai_monev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_monev_nilai"
            android:layout_marginBottom="@dimen/dimen_big_ultra_32dp"/>

        <Button
            android:id="@+id/act_dsn_info_button_ubah"
            android:text="@string/text_ubah_monev"
            style="@style/button_all_primary"/>

    </LinearLayout>

</ScrollView>