<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_big_16dp">

        <ImageView
            android:src="@drawable/ic_editor_person"
            style="@style/image_all_editor_view"/>

        <TextView
            android:layout_marginStart="@dimen/dimen_small_4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nim_mahasiswa"
            android:layout_marginTop="@dimen/dimen_medium_8dp"
            android:layout_marginBottom="@dimen/dimen_medium_8dp"
            android:textSize="@dimen/text_size_title_small_18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_koor_edittext_nim_mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/hint_nim_mahasiswa"/>

        <TextView
            android:layout_marginStart="@dimen/dimen_small_4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nama_mahasiswa"
            android:layout_marginTop="@dimen/dimen_medium_8dp"
            android:layout_marginBottom="@dimen/dimen_medium_8dp"
            android:textSize="@dimen/text_size_title_small_18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_koor_edittext_nama_mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/hint_nama_mahasiswa"/>

        <TextView
            android:layout_marginStart="@dimen/dimen_small_4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_angkatan"
            android:layout_marginTop="@dimen/dimen_medium_8dp"
            android:layout_marginBottom="@dimen/dimen_medium_8dp"
            android:textSize="@dimen/text_size_title_small_18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_koor_edittext_angkatan_mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            android:singleLine="true"
            android:hint="@string/hint_angkatan_mahasiswa"/>

        <TextView
            android:layout_marginStart="@dimen/dimen_small_4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_email_dosen"
            android:layout_marginTop="@dimen/dimen_medium_8dp"
            android:layout_marginBottom="@dimen/dimen_medium_8dp"
            android:textSize="@dimen/text_size_title_small_18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_koor_edittext_email_mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email_dosen"/>

        <TextView
            android:layout_marginStart="@dimen/dimen_small_4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_kontak_dosen"
            android:layout_marginTop="@dimen/dimen_medium_8dp"
            android:layout_marginBottom="@dimen/dimen_medium_8dp"
            android:textSize="@dimen/text_size_title_small_18sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/act_koor_edittext_kontak_mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_kontak_mahasiswa"
            android:layout_marginBottom="@dimen/dimen_big_ultra_32dp"/>

        <Button
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/act_koor_mahasiswa_button_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_click_ubah_mahasiswa"
            android:textColor="@color/colorTextWhite"
            android:background="@drawable/box_border_button_primary"/>

    </LinearLayout>

</ScrollView>